# blog-api

./: .env.example  .flake8  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  requirements.txt
.github/workflows/: checks.yaml
api/api/: asgi.py  celery.py  middleware.py  settings.py  urls.py
api/chat/: consumers.py  models.py  routing.py
api/chat/fixtures/: message.json
api/chat/migrations/: 0001_initial.py  0002_alter_message_timestamp.py  0002_initial.py
api/core/: admin.py  models.py  serializers.py  tasks.py  tests.py  urls.py  views.py
api/core/fixtures/: comment.json  post.json  user.json
api/core/migrations/: 0001_initial.py  0002_comment.py  0002_remove_user_email_confirmation_token_and_more.py  0003_alter_post_image.py
